<resources>
    <string name="AND_storefront_collapsible_layout_hide">hide</string>
    <string name="AND_storefront_collapsible_layout_show">show</string>
    <string name="AND_storefront_item_accessibility_action_clip">clip</string>
    <string name="AND_storefront_item_accessibility_action_unclip">unclip</string>
    <string name="AND_storefront_item_accessibility_value_clipped">Clipped</string>
    <string name="AND_storefront_item_accessibility_value_unclipped">Unclipped</string>
    <string name="AND_storefront_wayfinder_accessibility">Categories navigation</string>
    <string name="AND_storefront_wayfinder_accessibility_action_open">select</string>
    <string name="AND_storefront_wayfinder_accessibility_action_scroll">scroll</string>
    <string name="AND_storefront_wayfinder_accessibility_empty">No category navigation</string>
    <string name="FACEBOOK_APP_ID">871203050054119</string>
    <string name="IOS_storefront_collapsible_layout_hide">Double tap to hide</string>
    <string name="IOS_storefront_collapsible_layout_show">Double tap to show</string>
    <string name="Pvp_delivery_unavailable">Sorry, free delivery to %1$s isn’t currently available for Pro Volume quantities (3+). Please contact your local store to place this order.</string>
    <string name="SFVC_SEARCH">Searching for Stores…</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_content_one">Enjoy faster checkout</string>
    <string name="acc_content_three">Access items added to your cart from other logged-in devices</string>
    <string name="acc_content_two">Access order history and track orders</string>
    <string name="accessibility_ad_learn_more">Learn More</string>
    <string name="accessibility_video_player_action_click">Access Controls</string>
    <string name="account">My Account</string>
    <string name="account_id">602043299001</string>
    <string name="account_privacy_policy">Privacy Policy</string>
    <string name="account_site_protected">Homedepot.ca and its apps are protected by reCAPTCHA. The Google %1$s and %2$s apply</string>
    <string name="account_terms">Terms of Service</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_protection_plan">Add Protection Plan</string>
    <string name="add_receipt_add_another_cta">Add New Receipt</string>
    <string name="add_receipt_add_photo_cta">Add Photo</string>
    <string name="add_receipt_cancel_cta">Cancel</string>
    <string name="add_receipt_cta"><u>Add Receipt</u></string>
    <string name="add_receipt_done_cta">Done</string>
    <string name="add_receipt_enter_manually_cta">Enter Manually</string>
    <string name="add_receipt_header">Add Receipt</string>
    <string name="add_receipt_scan_cta">Scan Receipt</string>
    <string name="add_receipt_success_description">"Please allow 24 hours for your receipt to be validated and added to your purchase history. If it doesn't appear in purchase history, there was a problem validating the receipt."</string>
    <string name="add_receipt_success_title">Receipt Entry Submitted</string>
    <string name="add_receipt_view_example">View example.</string>
    <string name="add_to_cart_fbt">Add to Cart</string>
    <string name="add_to_cart_plus">+ ADD TO CART</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answers">Answers</string>
    <string name="api_error_persistent_button_title">Go to Home Screen</string>
    <string name="appId">AppID:</string>
    <string name="appIdClipBoard">App Id copied to clipboard</string>
    <string name="app_file_provider">com.thehomedepotca.provider</string>
    <string name="app_name">Home Depot</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appliance_delivery_checklist">Appliance Delivery Checklist</string>
    <string name="appliance_delivery_promo_desc">(limited time offer, save %s)</string>
    <string name="apply_selected_refinements">Would you like to apply the selected refinements?</string>
    <string name="are_you_purchasing_for_your_business">Are you purchasing for your business?</string>
    <string name="arrival">Arrival</string>
    <string name="as_early_as">As early as %1$s</string>
    <string name="ask_a_question">ASK A QUESTION</string>
    <string name="asked_by">Asked by</string>
    <string name="atc_status_c952">Product is sold out on the store you selected, please change another store to pick up or change delivery method to ship to home.</string>
    <string name="atc_status_cemod002">The quantity has been reduced due to low stock. We can only provide you with %1$s of this item.</string>
    <string name="atc_status_cemod003">This product is temporarily out of stock and could not be added to your cart.</string>
    <string name="atc_status_cemod006">"We don't have enough of this item in stock. You'll be notified when we have the full quantity on hand, and your entire order has shipped."</string>
    <string name="atc_status_cemod007">Item is no longer available and will be removed from your cart when you checkout.</string>
    <string name="atc_status_cemod008">Due to quantity limits for this product, the amount has been reduced to %1$s.</string>
    <string name="atc_status_cemod008_cart">The quantity of one or more items in your cart has changed. Please see below for details.</string>
    <string name="atc_status_promo002">Unfortunately, your free item is out of stock at this time and could not be added to your cart. Please try another store or change your delivery method.</string>
    <string name="auth_error_message">Your email and password do not match. Please try again or reset your password</string>
    <string name="back">Back</string>
    <string name="backorder">On Backorder</string>
    <string name="backorderkey">backorder</string>
    <string name="barcode_oops">Oops !</string>
    <string name="cd_account">My Account, Button</string>
    <string name="cd_home">Home, Button</string>
    <string name="cd_my_list">My List, Button</string>
    <string name="cd_shop">Shop, Button</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_search_term">Clear Search Term</string>
    <string name="do_it_yourself">Do it Yourself</string>
    <string name="experimental_options">Experimental Options</string>
    <string name="feedback">Feedback</string>
    <string name="input_receipt_date_header">Date*</string>
    <string name="input_receipt_date_hint">(DD/MM/YY)</string>
    <string name="input_receipt_date_hint_label">Date (DD/MM/YY)</string>
    <string name="input_receipt_hint_description">Please enter the following details found on your receipt.</string>
    <string name="input_receipt_hint_title">Receipt Details</string>
    <string name="input_receipt_number_header">Receipt Number*</string>
    <string name="input_receipt_number_hint">Enter a 14-digit number. (e.g. 7110 00026 52225)</string>
    <string name="input_receipt_receipt_number_hint_label">Receipt Number</string>
    <string name="input_receipt_subtotal_header">Subtotal*</string>
    <string name="input_receipt_subtotal_hint">Enter the subtotal from your receipt (amount before tax).</string>
    <string name="input_receipt_subtotal_hint_example">Subtotal 238.97</string>
    <string name="input_receipt_subtotal_hint_label">Subtotal</string>
    <string name="loc_option_bullet_item_availability">• \u0009 Item Availability</string>
    <string name="loc_option_bullet_local_ad">• \u0009 Your Weekly Flyer</string>
    <string name="loc_option_bullet_local_pricing">• \u0009 Local Pricing</string>
    <string name="loc_option_bullet_upcoming_workshops">• \u0009 Upcoming Workshops</string>
    <string name="loc_option_search_hint">Enter City or Postal Code</string>
    <string name="loc_option_signin_btn_label">Sign In to Your Account</string>
    <string name="loc_option_title">Find A Store</string>
    <string name="menu_account">Account</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_credit_cards">Credit Services</string>
    <string name="menu_customer_support">Customer Support</string>
    <string name="menu_for_the_pro">For the Pro</string>
    <string name="menu_gift_cards">Gift Cards</string>
    <string name="menu_installation_services">Home Services</string>
    <string name="menu_order_status">Order Status</string>
    <string name="menu_other">Other</string>
    <string name="menu_recently_viewed">Recently Viewed</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_in">Sign In / Create Account</string>
    <string name="menu_sign_up_emails">Sign Up for Emails</string>
    <string name="menu_store_finder">Store Finder</string>
    <string name="menu_value_center">Value Center</string>
    <string name="menu_vehicle_rental">Tool &amp; Vehicle Rental</string>
    <string name="menu_weeklyflyers">Weekly Flyer</string>
    <string name="menu_workshops">Workshops</string>
    <string name="ok">Ok</string>
    <string name="receipt_date_error">Enter a date within the past 24 months.</string>
    <string name="receipt_number_error">Please enter a valid receipt number.</string>
    <string name="receipt_subtotal_error">Please enter a valid subtotal.</string>
    <string name="scan_receipt_error_description">Unable to detect a barcode. Please add manually or try a different receipt.</string>
    <string name="scan_receipt_error_tip_description">"• Hold camera 4 inches above barcode.
• Capture the entire barcode in the photo.
• Ensure optimal lighting conditions."</string>
    <string name="scan_receipt_error_tip_title">Tips to Capture a Barcode</string>
    <string name="scan_receipt_error_title">Invalid Receipt</string>
    <string name="scan_receipt_hint_foot_note">Receipt date must be after your Pro Xtra sign-up date.</string>
    <string name="services">Services</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit_receipt_cta">Add Receipt</string>
    <string name="txtShop">Shop</string>
</resources>