<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/intercept_accessibility" android:layout_width="fill_parent" android:layout_height="@dimen/size_52dp" android:elevation="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/intercept1" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:contentDescription="@string/cd_home" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/intercept2" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:id="@id/intercept2" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:contentDescription="@string/cd_shop" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/intercept3" app:layout_constraintStart_toEndOf="@id/intercept1" />
    <TextView android:id="@id/intercept3" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:contentDescription="@string/cd_account" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/intercept4" app:layout_constraintStart_toEndOf="@id/intercept2" />
    <TextView android:id="@id/intercept4" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="fill_parent" android:contentDescription="@string/cd_my_list" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/intercept3" />
</androidx.constraintlayout.widget.ConstraintLayout>
