<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/white" android:paddingTop="@dimen/margin_xxlarge" android:paddingBottom="@dimen/margin_xlarge" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/margin_xlarge" android:paddingEnd="@dimen/margin_xlarge"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/margin_xxxxlarge">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_info" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/scan_receipt_hint_foot_note" android:drawablePadding="@dimen/margin_regular" app:drawableStartCompat="@drawable/ic_info_input" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:id="@id/tv_receipt_number_header" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xxlarge" android:text="@string/input_receipt_number_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_info" style="@style/App.Regular.Gray20.14" />
            <TextView android:id="@id/tv_receipt_number_hint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/input_receipt_number_hint" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_number_header" style="@style/App.Regular.C3.12" />
            <TextView android:id="@id/et_receipt_date" android:background="@drawable/shape_round_rect_outline_c23" android:paddingTop="@dimen/margin_large" android:paddingBottom="@dimen/margin_large" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_regular" android:paddingStart="@dimen/margin_regular" android:paddingEnd="@dimen/margin_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_date_hint" style="@style/App.Regular.Black.16" />
            <TextView android:id="@id/tv_receipt_number_error" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_regular" android:text="@string/receipt_number_error" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_receipt_number" style="@style/App.Regular.RedError.14" />
            <TextView android:id="@id/tv_receipt_date_header" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xxlarge" android:text="@string/input_receipt_date_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_number_error" style="@style/App.Regular.Gray20.14" />
            <TextView android:id="@id/tv_receipt_date_hint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/input_receipt_date_hint" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_date_header" style="@style/App.Regular.C3.12" />
            <EditText android:id="@id/et_receipt_number" android:background="@drawable/shape_round_rect_outline_c23" android:paddingTop="@dimen/margin_large" android:paddingBottom="@dimen/margin_large" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_regular" android:maxLines="1" android:maxLength="16" android:digits="0123456789 " android:inputType="number" android:imeOptions="actionDone" android:paddingStart="@dimen/margin_regular" android:paddingEnd="@dimen/margin_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_number_hint" style="@style/App.Regular.Black.16" />
            <TextView android:id="@id/tv_date_error" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_regular" android:text="@string/receipt_date_error" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_receipt_date" style="@style/App.Regular.RedError.14" />
            <TextView android:id="@id/tv_receipt_subtotal_header" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xxlarge" android:text="@string/input_receipt_subtotal_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_date_error" style="@style/App.Regular.Gray20.14" />
            <TextView android:id="@id/tv_receipt_subtotal_hint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/input_receipt_subtotal_hint" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_subtotal_header" style="@style/App.Regular.C3.12" />
            <EditText android:id="@id/et_receipt_subtotal" android:background="@drawable/shape_round_rect_outline_c23" android:paddingTop="@dimen/margin_large" android:paddingBottom="@dimen/margin_large" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_regular" android:maxLines="1" android:digits="0123456789." android:inputType="number" android:imeOptions="actionDone" android:paddingStart="@dimen/margin_regular" android:paddingEnd="@dimen/margin_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_receipt_subtotal_hint" style="@style/App.Regular.Black.16" />
            <TextView android:id="@id/tv_subtotal_error" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_regular" android:text="@string/receipt_subtotal_error" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_receipt_subtotal" style="@style/App.Regular.RedError.14" />
            <TextView android:id="@id/tv_reset" android:background="?android:selectableItemBackground" android:padding="@dimen/margin_xlarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear_all" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_subtotal_error" style="@style/App.Regular.Bluesteel.16" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar android:layout_gravity="center" android:id="@id/progress_bar" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <Button android:layout_gravity="bottom" android:id="@id/btn_submit" android:layout_width="fill_parent" android:layout_height="@dimen/cta_button_height" android:text="@string/submit_receipt_cta" app:layout_constraintStart_toStartOf="parent" style="@style/PrimaryButtonStyle" />
</FrameLayout>
