<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:paddingBottom="@dimen/margin_xlarge" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:gravity="center" android:id="@id/tv_title" android:background="@color/scan_receipt_hint_header_bg" android:padding="@dimen/margin_xlarge" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/input_receipt_hint_title" app:drawableEndCompat="@drawable/ic_close_x" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/App.Bold.Black.14" />
    <TextView android:gravity="center" android:id="@id/tv_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xlarge" android:text="@string/input_receipt_hint_description" android:layout_marginStart="@dimen/margin_xxxxlarge" android:layout_marginEnd="@dimen/margin_xxxxlarge" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" style="@style/App.Regular.Black.14" />
    <ImageView android:id="@id/iv_receipt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xlarge" android:src="@drawable/ic_receipt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_description" />
    <TextView android:id="@id/tv_subtotal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_receipt_subtotal_hint_example" app:layout_constraintBottom_toBottomOf="@id/iv_receipt" app:layout_constraintEnd_toEndOf="@id/iv_receipt" app:layout_constraintHorizontal_bias="0.84" app:layout_constraintStart_toStartOf="@id/iv_receipt" app:layout_constraintTop_toTopOf="@id/iv_receipt" app:layout_constraintVertical_bias="0.78" style="@style/App.Regular.Black.14" />
    <TextView android:id="@id/tv_subtotal_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_receipt_subtotal_hint_label" android:layout_marginStart="@dimen/margin_regular" android:layout_marginEnd="@dimen/margin_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.6" app:layout_constraintStart_toEndOf="@id/tv_date_label" app:layout_constraintTop_toBottomOf="@id/iv_receipt" style="@style/App.Regular.Black.14" />
    <TextView android:id="@id/tv_date_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_receipt_date_hint_label" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_receipt" style="@style/App.Regular.Black.14" />
    <TextView android:id="@id/tv_receipt_number_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/input_receipt_receipt_number_hint_label" android:layout_marginStart="@dimen/margin_regular" android:layout_marginEnd="@dimen/margin_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/tv_date_label" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_receipt" style="@style/App.Regular.Black.14" />
</androidx.constraintlayout.widget.ConstraintLayout>
