<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/relativeLayout2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingBottom="70.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <RelativeLayout android:background="@drawable/selector_transparent_white_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <RelativeLayout android:id="@id/loc_header_layout" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
                <ImageView android:id="@id/loc_hd_logo_IV" android:layout_width="65.0dip" android:layout_height="65.0dip" android:src="@drawable/hd_logo" android:layout_alignParentLeft="true" />
                <RelativeLayout android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/header_search_layout" android:background="@drawable/shape_bevelededge_gray_with_border" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:layout_toRightOf="@id/loc_hd_logo_IV" android:layout_centerVertical="true">
                    <EditText android:textSize="15.0sp" android:textColor="@color/black" android:textColorHint="@color/c3" android:gravity="center_vertical" android:id="@id/loc_option_store_search_et" android:background="@color/transparent" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/loc_option_search_hint" android:maxLines="1" android:lines="1" android:ems="10" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:inputType="textNoSuggestions" android:imeOptions="actionSearch" android:contentDescription="@string/loc_option_search_hint" />
                    <ImageView android:id="@id/header_store_IV" android:background="@drawable/cta_form_store_gray" android:padding="5.0dip" android:visibility="invisible" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:importantForAccessibility="noHideDescendants" />
                    <ImageView android:id="@id/flp_store_search_clear" android:padding="5.0dip" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/clear" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/clear_search_term" />
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/loc_desc_layout" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/loc_header_layout">
                <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:textColor="@color/slight_grey" android:id="@id/loc_options_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_option_title" style="@style/LargeBold" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/dark_grey" android:id="@id/loc_options_bulleted_content_tv" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_option_bullet_local_pricing" style="@style/Normal14" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/dark_grey" android:id="@id/TextView01" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_option_bullet_item_availability" style="@style/Normal14" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/dark_grey" android:id="@id/TextView02" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_option_bullet_local_ad" style="@style/Normal14" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/dark_grey" android:id="@id/TextView03" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loc_option_bullet_upcoming_workshops" style="@style/Normal14" />
            </LinearLayout>
        </RelativeLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/c3" android:id="@id/loc_option_signin_btn" android:background="@drawable/selector_transparent_scan_header_background" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/loc_option_signin_btn_label" style="@style/LargeBold" />
    </LinearLayout>
</RelativeLayout>
